<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    >

    <TextView
        android:id="@+id/hometv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_v2"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/buttonSWManagement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hometv"
        android:textSize="40dp"
        android:text="@string/swManagement"
        android:layout_marginLeft="80dp"
        app:layout_constraintTop_toTopOf="@id/buttonStats"
        app:layout_constraintBottom_toBottomOf="@id/buttonStats"
        android:background="@drawable/background_v1"
        android:padding="15dp"
        />
    <Button
        android:id="@+id/buttonStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hometv"
        android:textSize="40dp"
        android:text="@string/stats"
        android:layout_marginRight="80dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/background_v1"
        android:padding="15dp"
        />
    <Button
        android:id="@+id/buttonShop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSWManagement"
        android:textSize="40dp"
        android:text="@string/shop"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/background_v1"
        android:padding="15dp"
        />
    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonShop"
        app:layout_constraintBottom_toBottomOf="@id/buttonShop"
        android:textSize="40dp"
        android:text="@string/settings"
        android:layout_marginRight="80dp"
        android:background="@drawable/background_v1"
        android:padding="15dp"

        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_uol_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="80dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>