<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_v2"
    >

    <TextView
        android:id="@+id/swNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:textSize="40dp"
        android:text="@string/swNameExample1"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/swDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/swNameTV"
        app:layout_constraintEnd_toStartOf="@+id/swPrice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20dp"
        android:text="@string/descriptionExample1"
        android:layout_marginHorizontal="40dp"
        />
    <TextView
        android:id="@+id/swPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:text="@string/price"
        />
</androidx.constraintlayout.widget.ConstraintLayout>