<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <Button
        android:id="@+id/shopShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/shop"
        android:textSize="40dp"
        android:background="@drawable/background_v1"
        android:padding="20dp"
        android:layout_margin="50dp"
        />
    <Button
        android:id="@+id/shopTrends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/shopShop"
        app:layout_constraintEnd_toStartOf="@id/shopSuggestions"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/trends"
        android:textSize="40dp"
        android:background="@drawable/background_v1"
        android:padding="20dp"
        android:layout_margin="50dp"
        />
    <Button
        android:id="@+id/shopSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/suggestions"
        android:textSize="40dp"
        android:background="@drawable/background_v1"
        android:padding="20dp"
        android:layout_margin="50dp"
        />
    <ListView
        android:id="@+id/listViewShop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/shopShop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        tools:listitem="@layout/sw_shop_item"
        />


</androidx.constraintlayout.widget.ConstraintLayout>